offset fixed header height for jump links

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,3 +20,10 @@
 .card-button-icon {
     margin-bottom: -5px;
 }
+
+:target::before {
+    content: "";
+    display: block;
+    height: 72px; /* fixed header height*/
+    margin: -72px 0 0; /* negative fixed header height */
+}
